crates/syauth-cli/tests/snapshots/cli__status_help_snapshot.snap
---
source: crates/syauth-cli/tests/cli.rs
expression: "help_stdout(&[\"status\", \"--help\"])"
---
Print adapter state, advertising state, bond count, and the most recent unlock outcome. Read-only — never writes to the host

Usage: syauth status [OPTIONS]

Options:
      --adapter <ADAPTER>    BlueZ adapter id (e.g. `hci0`) [default: hci0]
      --bond-dir <BOND_DIR>  Directory holding the bonds file. Defaults to SPEC's `/var/lib/syauth/`. Tests inject a tempdir [default: /var/lib/syauth]
      --last-log <LAST_LOG>  Path to the rolling unlock log. Defaults to `<bond-dir>/last.log`. Tests inject a fixture path
  -h, --help                 Print help
