crates/syauth-cli/tests/snapshots/cli__uninstall_pam_help_snapshot.snap
---
source: crates/syauth-cli/tests/cli.rs
expression: "help_stdout(&[\"uninstall-pam\", \"--help\"])"
---
Restore a PAM service file from its `.bak` and remove the bak

Usage: syauth uninstall-pam [OPTIONS] --service <SERVICE>

Options:
      --service <SERVICE>  PAM service to uninstall from
      --pam-dir <PAM_DIR>  PAM service directory. Defaults to `/etc/pam.d`. Tests inject a tempdir [default: /etc/pam.d]
      --yes                Skip the interactive confirmation prompt
  -h, --help               Print help
